--- a/src/pages/Familias/Components/familias.component.html
+++ b/src/pages/Familias/Components/familias.component.html
@@ -1,9 +1,11 @@
 <div class="container mt-5">
   <div class="row">
     <!-- Formulario -->
-    <div class="col-md-6">
-      <h1 class="display-4 text-primary">Registro de Familias</h1>
-      <form class="border rounded p-4 shadow bg-dark text-light">
+    <div class="col-md-5 mx-auto">
+      <h1 class="display-4 text-light text-center mb-4">
+        Registro de Familias
+      </h1>
+      <form class="border rounded p-4 shadow-lg bg-transparent text-light">
         <div class="mb-3">
           <label for="nombreFamilia" class="form-label"
             >Nombre de Familia</label
@@ -11,7 +13,7 @@
           <input
             type="text"
             id="nombreFamilia"
-            class="form-control"
+            class="form-control floatin-label border-0"
             placeholder="Ingrese nombre de familia"
           />
         </div>
@@ -22,54 +24,64 @@
           <input
             type="text"
             id="usuarioIngreso"
-            class="form-control"
+            class="form-control border-0"
             placeholder="Ingrese usuario de ingreso"
           />
         </div>
-        <div class="mb-3">
+
+        <div class="mb-4">
           <label for="estado" class="form-label">Estado</label>
           <select id="estado" class="form-select">
             <option value="" selected disabled>Seleccione un estado</option>
-            <option value="1">Activo</option>
-            <option value="0">Inactivo</option>
+            <!-- Por tema de tiempo y de Rquerimiento se ha establecico fijo y no dinamico o cargado desde los datos 
+             TODO: Separar los Estados de la Entidad Familia 
+             Objetivo: Tener un catalogo de Estados y se puedan cargar dinamicamente desde la BD, permitiendo también
+             un mejor mantenimiento.
+            -->
+             <option value = "1"> Activo </option>
+             <option value = "0"> Inactivo </option>
           </select>
         </div>
-        <button type="submit" class="btn btn-primary w-100">
+        <button type="submit" class="btn btn-primary w-100 mt-3">
           Registrar Familia
         </button>
       </form>
+    
     </div>
 
     <!-- Tabla de Familias -->
-
-    @let familia = familias;
-    <div class="col-md-6">
+    <div class="col-md-5">
       <h2 class="text-center mb-4 text-light">Familias Registradas</h2>
-      @if (familias.length === 0 ) {
+      @if (Familias.length === 0) {
       <div class="text-center text-muted">
         No se encontraron familias registradas.
       </div>
       } @else {
-      <table class="table table-dark table-striped table-hover rounded">
-        <thead>
-          <tr>
-            <th>ID Familia</th>
-            <th>Nombre de Familia</th>
-            <th>Usuario de Ingreso</th>
-            <th>Estado</th>
-          </tr>
-        </thead>
-        <tbody>
-          @for (familia of familias; track familia.IdFamilia) {
-          <tr>
-            <td>{{ familia.IdFamilia }}</td>
-            <td>{{ familia.NombreFamilia }}</td>
-            <td>{{ familia.usuarioIngreso }}</td>
-            <td>@if (familia.Estado == 1) { Activo } @else { Inactivo }</td>
-          </tr>
-          }
-        </tbody>
-      </table>
+      <div class="table-responsive">
+        <table
+          class="table table-dark table-striped table-hover rounded"
+          id="tablaFamilias"
+        >
+          <thead>
+            <tr>
+              <th>ID Familia</th>
+              <th>Nombre de Familia</th>
+              <th>Usuario de Ingreso</th>
+              <th>Estado</th>
+            </tr>
+          </thead>
+          <tbody>
+            @for (familia of Familias; track familia) {
+            <tr>
+              <td>{{ familia.idFamilia }}</td>
+              <td>{{ familia.nombreFamilia }}</td>
+              <td>{{ familia.usuarioIngreso }}</td>
+              <td> @if (familia.estado === 1) { Activo } @else { Inactivo } </td>
+            </tr>
+            }
+          </tbody>
+        </table>
+      </div>
       }
     </div>
   </div>
